# WeatherAPI

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  check_real_precip.py  pyproject.toml  pytest.ini  requirements.txt  stormcast.db
docs/: ml_report.md
ml_engine/: README.md  __init__.py  ml_api.py
ml_engine/artifacts/: __init__.py  generate_dummy_artifacts.py  metadata.json  metrics.json  verify_artifacts.py
ml_engine/evaluation/: __init__.py  evaluate.py
ml_engine/explainability/: __init__.py  explain.py
ml_engine/features/: __init__.py  build_features.py
ml_engine/ingestion/: __init__.py  client.py  import_meteostat.py  models.py  storage.py  verify_db.py
ml_engine/tests/: test_artifacts_verify.py  test_evaluation.py  test_explainability.py  test_features.py  test_import_meteostat.py  test_ingestion_client.py  test_ml_api_contract.py  test_smoke.py  test_storage.py
ml_engine/training/: __init__.py  train.py
platform/api/: main.py  middleware.py
platform/services/: cache.py  data_service.py  feature_service.py
platform/tests/: conftest.py  test_api_health.py  test_api_observability.py  test_api_v1.py  test_cache.py  test_feature_service.py  test_model_service.py
platform/web/: index.html
platform_api/: config.py  logging.py
platform_api/api/: main.py
platform_api/schemas/: explain.py  health.py
platform_api/services/: data_service.py  model_service.py
platform_api/tests/: conftest.py  test_explain.py  test_nowcast.py
platform_internal/api/: main.py
platform_internal/services/: settings.py  (+1 more)
weather_platform/: config.py
(+25 files in other folders)
