[project]
name = "ml_engine"
version = "0.0.1"
description = "Lightweight ML engine scaffolding for WeatherAPI"
requires-python = ">=3.10"
readme = "ml_engine/README.md"
dependencies = [
	"pandas>=1.5",
	"requests>=2.28",
	"sqlalchemy>=2.0",
	"scikit-learn>=1.2",
	"joblib>=1.2",
	"matplotlib>=3.7",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
